--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FPAT - Firewall Policy Analysis Tool</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/loading-css/dist/loading.min.css">
+    <link href="{{ url_for('static', path='/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/css/bootstrap-icons.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/css/dataTables.bootstrap5.min.css') }}" rel="stylesheet">
+    <!-- <link href="{{ url_for('static', path='/css/loading.min.css') }}" rel="stylesheet"> -->
     <link rel="stylesheet" href="{{ url_for('static', path='/css/styles.css') }}">
 </head>
 <body class="bg-dark text-light d-flex flex-column min-vh-100">
     <div class="container mt-5 flex-grow-1">
         <h1 class="text-center mb-4">FPAT</h1>
-        <p class="text-center text-muted mb-5">Firewall Policy Analysis Tool</p>
-
+        <p class="text-center text-secondary mb-5">Firewall Policy Analysis Tool</p>
         <div class="card bg-secondary mb-4 shadow">
             <div class="card-body">
                 <div class="input-group">
@@ -47,11 +46,11 @@
         <p class="mb-0">Made by Hun-seop Kim, 2024</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <script src="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/jquery-3.6.0.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/jquery.dataTables.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/dataTables.bootstrap5.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/xlsx.full.min.js') }}"></script>
     <script src="{{ url_for('static', path='/js/script.js') }}"></script>
 </body>
 </html>
