--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FPAT - Firewall Policy Analysis Tool</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/dataTables.bootstrap5.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap-icons.css" rel="stylesheet">
+    <link href="static/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body class="bg-dark text-light d-flex flex-column min-vh-100">
     <div class="container mt-5 flex-grow-1">
@@ -35,21 +35,20 @@
                 </div>
                 </div>
             </div>
-        </div>
-        <div id="task-list" class="mb-4">
-            <!-- 태스크 항목들이 여기에 동적으로 추가됩니다 -->
-        </div>
+            <div id="task-list" class="mb-4">
+                <!-- 태스크 항목들이 여기에 동적으로 추가됩니다 -->
+            </div>
         </div>
     </div>
     <footer class="bg-dark text-light text-center py-3 mt-auto">
         <p class="mb-0">Made by Hun-seop Kim, 2024</p>
     </footer>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/jquery.dataTables.min.js"></script>
-    <script src="js/dataTables.bootstrap5.min.js"></script>
-    <script src="js/xlsx.full.min.js"></script>
-    <script src="js/FileSaver.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="static/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/jquery-3.6.0.min.js"></script>
+    <script src="static/js/jquery.dataTables.min.js"></script>
+    <script src="static/js/dataTables.bootstrap5.min.js"></script>
+    <script src="static/js/xlsx.full.min.js"></script>
+    <script src="static/js/FileSaver.min.js"></script>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
