script.js 삭제 후 모듈화함

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,22 +27,21 @@
                     </select>
                     <button class="btn btn-primary" type="button" id="run-button">Run</button>
                 </div>
-                </div>
             </div>
-            <div id="task-list" class="mb-4">
-                <!-- 태스크 항목들이 여기에 동적으로 추가됩니다 -->
-            </div>
+        </div>
+        <div id="task-list" class="mb-4">
+            <!-- 태스크 항목들이 여기에 동적으로 추가됩니다 -->
         </div>
     </div>
     <footer class="bg-dark text-light text-center py-3 mt-auto">
         <p class="mb-0">Made by Hun-seop Kim, 2024</p>
     </footer>
-    <script src="static/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/jquery-3.6.0.min.js"></script>
+    <script src="static/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/jquery.dataTables.min.js"></script>
     <script src="static/js/dataTables.bootstrap5.min.js"></script>
     <script src="static/js/xlsx.full.min.js"></script>
     <script src="static/js/FileSaver.min.js"></script>
-    <script src="static/js/script.js"></script>
+    <script type="module" src="static/js/main.js"></script>
 </body>
 </html>
